nav_top y maquetación de nav y el logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,63 @@
 
 <body>
 
+    <div class="wrapper">
+        <header>
+            <div class="navTop">
+                <div class="container">
+                    <!-- Porque está encorsetado el contenido pero es fluido el bloque-->
+                    <div>
+                        <a href="mailto:rovers@gmail.com" title="rover@gmail.com">
+                            <i class="fa-solid fa-envelope"></i>
+                            <span>rovers@gmail.com</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="tel:915556677" title="915556677">
+                            <i class="fa-solid fa-phone-flip"></i>
+                            <span>91 555 66 77</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="carrito">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>Carrito</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" title="login">
+                            <i class="fa-solid fa-user-circle"></i>
+                            <span>login</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="container">
+                    <figure class="logo">
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="Rovers">
+                        </a>
+                    </figure>
+                    <div class="hamburguesa">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul>
+                        <li><a class="activo" href="index.html">Home</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="equipo.html">Equipo</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <div class="hero"></div>
+        <main></main>
+        <footer></footer>
+    </div>
+
 </body>
 
 </html>
