--- a/index.html
+++ b/index.html
@@ -63,7 +63,27 @@
                 </div>
             </nav>
         </header>
-        <div class="hero"></div>
+        <div class="hero">
+            <h1>Las mejores hamburguesas del mundo</h1>
+            <h2>Bienvenido a nuestra hamburguesería</h2>
+            <h3>Come a partir de 15€</h3>
+            <a href="#">Nuestra carta <i class="fa-solid fa-arrow-right-long"></i></a>
+            <article>
+                <a href="#" title="facebook">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </article>
+            <article>
+                <a href="#" title="twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </article>
+            <article>
+                <a href="#" title="Instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </article>
+        </div>
         <main></main>
         <footer></footer>
     </div>
