--- a/index.html
+++ b/index.html
@@ -5,56 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburguesería Rovers - Home</title>
+    <title>Hamburgueseria Rovers - Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="top">
 
     <div class="wrapper">
         <header>
-            <div class="navTop">
+            <div class="nav_top">
                 <div class="container">
-                    <!-- Porque está encorsetado el contenido pero es fluido el bloque-->
                     <div>
                         <a href="mailto:rovers@gmail.com" title="rover@gmail.com">
                             <i class="fa-solid fa-envelope"></i>
-                            <span>rovers@gmail.com</span>
+                            <span>rover@gmail.com</span>
                         </a>
                     </div>
+
                     <div>
                         <a href="tel:915556677" title="915556677">
                             <i class="fa-solid fa-phone-flip"></i>
                             <span>91 555 66 77</span>
                         </a>
                     </div>
+
                     <div>
-                        <a href="#" title="carrito">
+                        <a href="#" title="Carrito">
                             <i class="fa-solid fa-shopping-cart"></i>
                             <span>Carrito</span>
                         </a>
                     </div>
+
                     <div>
-                        <a href="#" title="login">
+                        <a href="#" title="Login">
                             <i class="fa-solid fa-user-circle"></i>
-                            <span>login</span>
+                            <span>Login</span>
                         </a>
                     </div>
+
                 </div>
             </div>
             <nav>
                 <div class="container">
+
                     <figure class="logo">
                         <a href="index.html">
                             <img src="./images/logo.jpg" alt="Rovers">
                         </a>
                     </figure>
+
+
                     <div class="hamburguesa">
                         <div></div>
                         <div></div>
                         <div></div>
                     </div>
-                    <ul>
+
+                    <ul class="menu">
+                        <!-- li*4>a{Item $} -->
                         <li><a class="activo" href="index.html">Home</a></li>
                         <li><a href="menu.html">Menú</a></li>
                         <li><a href="blog.html">Blog</a></li>
@@ -63,33 +71,22 @@
                 </div>
             </nav>
         </header>
-        <div class="hero">
-            <h1>Las mejores hamburguesas del mundo</h1>
-            <h2>Bienvenido a nuestra hamburguesería</h2>
-            <h3>Come a partir de 15€</h3>
-            <div class="boton">
-                <a href="#">Nuestra carta <i class="fa-solid fa-arrow-right-long"></i></a>
-            </div>
-            <section>
-                <article>
-                    <a href="#" title="facebook">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </article>
-                <article>
-                    <a href="#" title="twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </article>
-                <article>
-                    <a href="#" title="Instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                </article>
-            </section>
-        </div>
+        <div class="hero"></div>
         <main></main>
-        <footer></footer>
+        <footer>
+            <div class="container">
+                <p>
+                    Copyright &copy; 2022 -
+                    <a href="#">Aviso legal</a> -
+                    <a href="#">Cookies</a>
+                </p>
+            </div>
+        </footer>
+        <div class="arriba">
+            <a href="#top">
+                <i class="fa-solid fa-square-caret-up"></i>
+            </a>
+        </div>
     </div>
 
 </body>
