--- a/index.html
+++ b/index.html
@@ -71,7 +71,34 @@
                 </div>
             </nav>
         </header>
-        <div class="hero"></div>
+        <div class="hero">
+            <div class="container">
+                <h1>Las mejores hamburguesas del mundo</h1>
+                <h2>Bienvenido a nuestra hambuerguesería</h2>
+                <p>Come tan solo por 15€</p>
+                <div>
+                    <a href="" class="boton">
+                        Nuestra Carta
+                        <i class="fa-solid fa-long-arrow-alt-right"></i>
+                    </a>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <main></main>
         <footer>
             <div class="container">
