Generado los estilos tanto de elementos generales como de la sección our services

--- a/index.html
+++ b/index.html
@@ -99,7 +99,49 @@
                 </ul>
             </div>
         </div>
-        <main></main>
+        <main>
+            <section id="ourservices">
+                <div class="container">
+                    <h2>Our <span>services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <article>
+                            <div><i class="fa-solid fa-cogs"></i></div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae nisi omnis aperiam
+                                atque adipisci recusandae facilis veritatis officia molestiae.</p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+                        <article>
+                            <div><i class="fa-solid fa-truck"></i></div>
+                            <h3>2. Cocina moderna</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In quia amet, quos libero quas
+                                exercitationem officia accusamus est quaerat eos.</p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+                        <article>
+                            <div><i class="fa-solid fa-heart"></i></div>
+                            <h3>3. Servicio Impecable</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente id fugit delectus
+                                tempore, iste maxime dolore magnam rerum ullam facilis.</p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer>
             <div class="container">
                 <p>
