--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,70 @@
                 </div>
             </nav>
         </header>
-        <main></main>
+        <main>
+
+            <section>
+                <h2>Our <span>Blogs</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade">
+                    <span>X</span>
+                </div>
+                <div class="container">
+                    <article>
+                        <figure>
+                            <img src="./images/news3.jpg" alt="Bistec">
+                            <div class="fecha">
+                                <time>05 Mar</time>
+                            </div>
+                        </figure>
+                        <h2>Our Weekly Best Foods</h2>
+                        <h3>Posted by Rovers</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
+                            ullam quo modi quibusdam temporibus a.</p>
+                        <a href="" class="enlace">
+                            Leer más
+                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                        </a>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="./images/news4.jpg" alt="Bistec">
+                            <div class="fecha">
+                                <time>17 Feb</time>
+                            </div>
+                        </figure>
+                        <h2>Top Five Reason To Visit</h2>
+                        <h3>Posted by Rovers</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
+                            ullam quo modi quibusdam temporibus a.</p>
+                        <a href="" class="enlace">
+                            Leer más
+                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                        </a>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="./images/news3.jpg" alt="Bistec">
+                            <div class="fecha">
+                                <time>28 Feb</time>
+                            </div>
+                        </figure>
+                        <h2>Restaurant's Inside Design</h2>
+                        <h3>Posted by Rovers</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
+                            ullam quo modi quibusdam temporibus a.</p>
+                        <a href="" class="enlace">
+                            Leer más
+                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                        </a>
+                    </article>
+                </div>
+            </section>
+
+        </main>
         <footer>
             <div class="container">
                 <p>
