--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
         </header>
         <main>
 
-            <section>
+            <section id="blog">
                 <h2>Our <span>Blogs</span></h2>
                 <div class="underline">
                     <hr noshade="noshade">
@@ -84,11 +84,12 @@
                         <figure>
                             <img src="./images/news3.jpg" alt="Bistec">
                             <div class="fecha">
-                                <time>05 Mar</time>
+                                <p>05</p>
+                                <p>Mar</p>
                             </div>
                         </figure>
-                        <h2>Our Weekly Best Foods</h2>
-                        <h3>Posted by Rovers</h3>
+                        <h3>Our Weekly Best Foods</h3>
+                        <h4>Posted by Rovers</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
                             ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
                             ullam quo modi quibusdam temporibus a.</p>
@@ -101,11 +102,12 @@
                         <figure>
                             <img src="./images/news4.jpg" alt="Bistec">
                             <div class="fecha">
-                                <time>17 Feb</time>
+                                <p>17</p>
+                                <p>Feb</p>
                             </div>
                         </figure>
-                        <h2>Top Five Reason To Visit</h2>
-                        <h3>Posted by Rovers</h3>
+                        <h3>Top Five Reason To Visit</h3>
+                        <h4>Posted by Rovers</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
                             ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
                             ullam quo modi quibusdam temporibus a.</p>
@@ -118,11 +120,12 @@
                         <figure>
                             <img src="./images/news3.jpg" alt="Bistec">
                             <div class="fecha">
-                                <time>28 Feb</time>
+                                <p>28</p>
+                                <p>Feb</p>
                             </div>
                         </figure>
-                        <h2>Restaurant's Inside Design</h2>
-                        <h3>Posted by Rovers</h3>
+                        <h3>Restaurant's Inside Design</h3>
+                        <h4>Posted by Rovers</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
                             ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
                             ullam quo modi quibusdam temporibus a.</p>
