He cambiado los estilos de las fuentes También he añadido un container a la segunda parte del article para el aire que necesitaba

--- a/blog.html
+++ b/blog.html
@@ -88,15 +88,16 @@
                                 <p>Mar</p>
                             </div>
                         </figure>
-                        <h3>Our Weekly Best Foods</h3>
-                        <h4>Posted by Rovers</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
-                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
-                            ullam quo modi quibusdam temporibus a.</p>
-                        <a href="" class="enlace">
-                            Leer más
-                            <i class="fa-solid fa-long-arrow-alt-right"></i>
-                        </a>
+                        <div class="container">
+                            <h3>Our Weekly Best Foods</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            </p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
                     </article>
                     <article>
                         <figure>
@@ -106,33 +107,35 @@
                                 <p>Feb</p>
                             </div>
                         </figure>
-                        <h3>Top Five Reason To Visit</h3>
-                        <h4>Posted by Rovers</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
-                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
-                            ullam quo modi quibusdam temporibus a.</p>
-                        <a href="" class="enlace">
-                            Leer más
-                            <i class="fa-solid fa-long-arrow-alt-right"></i>
-                        </a>
+                        <div class="container">
+                            <h3>Top Five Reason To Visit</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            </p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
                     </article>
                     <article>
                         <figure>
-                            <img src="./images/news3.jpg" alt="Bistec">
+                            <img src="./images/news1.jpg" alt="Bistec">
                             <div class="fecha">
                                 <p>28</p>
                                 <p>Feb</p>
                             </div>
                         </figure>
-                        <h3>Restaurant's Inside Design</h3>
-                        <h4>Posted by Rovers</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
-                            ratione hic magnam odit quisquam distinctio excepturi nam sint iusto, nulla repellendus
-                            ullam quo modi quibusdam temporibus a.</p>
-                        <a href="" class="enlace">
-                            Leer más
-                            <i class="fa-solid fa-long-arrow-alt-right"></i>
-                        </a>
+                        <div class="container">
+                            <h3>Restaurant's Inside Design</h3>
+                            <h4>Posted by Rovers</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis aliquid, consectetur enim
+                            </p>
+                            <a href="" class="enlace">
+                                Leer más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </div>
                     </article>
                 </div>
             </section>
