He terminado el movil de la parte izquierda

--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,38 @@
                 </div>
             </nav>
         </header>
-        <main></main>
+        <main class="fondo">
+            <section id="menu">
+                <section class="titulo">
+                    <div class="container">
+                        <h2>Today's <span>Menu</span></h2>
+                        <div class="underline">
+                            <hr noshade="noshade">
+                            <span>X</span>
+                        </div>
+                    </div>
+                </section>
+                <div class="wrapper">
+                    <div class="container">
+                        <nav>
+                            <ul>
+                                <li><a class="activo" href="#">Breakfast</a></li>
+                                <li><a href="#">Lunch</a></li>
+                                <li><a href="#">Dinner</a></li>
+                                <li><a href="#">Others</a></li>
+                            </ul>
+                        </nav>
+                        <section class="offers">
+                            <h3>Today's Hot Offers</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem error pariatur
+                                voluptates,
+                                consequuntur sunt odit.</p>
+                        </section>
+                    </div>
+                    <section></section>
+                </div>
+            </section>
+        </main>
         <footer>
             <div class="container">
                 <p>
