--- a/menu.html
+++ b/menu.html
@@ -82,8 +82,8 @@
                         </div>
                     </div>
                 </section>
-                <div class="wrapper">
-                    <div class="container">
+                <div class="container">
+                    <div class="wapper">
                         <nav>
                             <ul>
                                 <li><a class="activo" href="#">Breakfast</a></li>
@@ -99,7 +99,41 @@
                                 consequuntur sunt odit.</p>
                         </section>
                     </div>
-                    <section></section>
+                    <section>
+                        <article>
+                            <figure>
+                                <img src="./images/t1.jpg" alt="Chicken Burger">
+                                <h3>Chicken Burger With Cheese and Butter <span>$95</span></h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                                <a href="" class="enlace">
+                                    Order now
+                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                </a>
+                            </figure>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./images/t4.jpg" alt="Coffe and Tea">
+                                <h3>Coffe and Tea with Milk and Chocolate <span>$30</span></h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                                <a href="" class="enlace">
+                                    Order now
+                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                </a>
+                            </figure>
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="./images/t2.jpg" alt="Chicken Burger">
+                                <h3>Hot Pizza With Extra Cheese and Butter <span>$65</span></h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                                <a href="" class="enlace">
+                                    Order now
+                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                </a>
+                            </figure>
+                        </article>
+                    </section>
                 </div>
             </section>
         </main>
