--- a/menu.html
+++ b/menu.html
@@ -63,8 +63,8 @@
 
                     <ul class="menu">
                         <!-- li*4>a{Item $} -->
-                        <li><a class="activo" href="index.html">Home</a></li>
-                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a class="activo" href="menu.html">Menú</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
