--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,7 @@
                     </div>
                 </section>
                 <div class="container">
-                    <div class="wapper">
+                    <aside>
                         <nav>
                             <ul>
                                 <li><a class="activo" href="#">Breakfast</a></li>
@@ -98,40 +98,34 @@
                                 voluptates,
                                 consequuntur sunt odit.</p>
                         </section>
-                    </div>
+                    </aside>
                     <section>
                         <article>
-                            <figure>
-                                <img src="./images/t1.jpg" alt="Chicken Burger">
-                                <h3>Chicken Burger With Cheese and Butter <span>$95</span></h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
-                                <a href="" class="enlace">
-                                    Order now
-                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                </a>
-                            </figure>
+                            <img src="./images/t1.jpg" alt="Chicken Burger">
+                            <h3>Chicken Burger With Cheese and Butter <span>$95</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                            <a href="" class="enlace">
+                                Order now
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
                         </article>
                         <article>
-                            <figure>
-                                <img src="./images/t4.jpg" alt="Coffe and Tea">
-                                <h3>Coffe and Tea with Milk and Chocolate <span>$30</span></h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
-                                <a href="" class="enlace">
-                                    Order now
-                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                </a>
-                            </figure>
+                            <img src="./images/t4.jpg" alt="Coffe and Tea">
+                            <h3>Coffe and Tea with Milk and Chocolate <span>$30</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                            <a href="" class="enlace">
+                                Order now
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
                         </article>
                         <article>
-                            <figure>
-                                <img src="./images/t2.jpg" alt="Chicken Burger">
-                                <h3>Hot Pizza With Extra Cheese and Butter <span>$65</span></h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
-                                <a href="" class="enlace">
-                                    Order now
-                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                </a>
-                            </figure>
+                            <img src="./images/t2.jpg" alt="Chicken Burger">
+                            <h3>Hot Pizza With Extra Cheese and Butter <span>$65</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, nulla?</p>
+                            <a href="" class="enlace">
+                                Order now
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
                         </article>
                     </section>
                 </div>
@@ -147,7 +141,7 @@
             </div>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="#top" title="Arriba">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
