--- a/blog.html
+++ b/blog.html
@@ -63,9 +63,9 @@
 
                     <ul class="menu">
                         <!-- li*4>a{Item $} -->
-                        <li><a class="activo" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menú</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="activo" href="blog.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
                 </div>
