He cambiado el title de los diferentes archvos y le he puesto un title a todos los enlaces que solo tenian un icono

--- a/plantilla.html
+++ b/plantilla.html
@@ -82,7 +82,7 @@
             </div>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="#top" title="Enlace">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
