--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgueseria Rovers - Home</title>
+    <title>Hamburgueseria Rovers - Blog</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -151,7 +151,7 @@
             </div>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="#top" title="Enlace">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
