--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                 </div>
                 <ul class="social">
                     <li>
-                        <a href="#">
+                        <a href="#" title="Enlace">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-brands fa-twitter"></i>
+                        <a href="#" title="Enlace"><i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-brands fa-instagram"></i>
+                        <a href="#" title="Enlace"><i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                 </ul>
@@ -152,7 +152,7 @@
             </div>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="#top" title="Enlace">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
