--- a/equipo.html
+++ b/equipo.html
@@ -71,7 +71,48 @@
                 </div>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <div class="container">
+                <section>
+                    <div class="container">
+                        <h2>Our <span>Team</span></h2>
+                        <div class="underline">
+                            <hr noshade="noshade">
+                            <span>X</span>
+                        </div>
+                    </div>
+                </section>
+                <section id="team">
+                    <article>
+                        <figure>
+                            <img src="./images/team1.jpg" alt="Shakib">
+                            <div class="person">
+                                <h3>Shakib.</h3>
+                                <p>Main Chef</p>
+                            </div>
+                        </figure>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="./images/team2.jpg" alt="Alex">
+                            <div class="person">
+                                <h3>Alex jr.</h3>
+                                <p>Inter Chef</p>
+                            </div>
+                        </figure>
+                    </article>
+                    <article>
+                        <figure>
+                            <img src="./images/team1.jpg" alt="Jhon">
+                            <div class="person">
+                                <h3>Jhon k.</h3>
+                                <p>Main Chef</p>
+                            </div>
+                        </figure>
+                    </article>
+                </section>
+            </div>
+        </main>
         <footer>
             <div class="container">
                 <p>
@@ -82,7 +123,7 @@
             </div>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="#top" title="Enlace">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
