He maquetado about us

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     </div>
                     <div class="grid">
                         <article>
+                            <!--TODO hay que mirar los border -->
                             <div><i class="fa-solid fa-cogs"></i></div>
                             <h3>1. Carne 100% natural</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut vitae nisi omnis aperiam
@@ -138,6 +139,29 @@
                                 <i class="fa-solid fa-long-arrow-alt-right"></i>
                             </a>
                         </article>
+                    </div>
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="flex">
+                        <div class="columna">
+                            <figure></figure>
+                        </div>
+                        <div class="columna">
+                            <h3>The History</h3>
+                            <h4>Our Restaurant</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur culpa, iure libero
+                                dicta quasi fugiat facilis velit repellendus iusto maiores! Sit harum ratione aperiam
+                                eligendi dolores doloribus repellat, animi alias?</p>
+                            <div>
+                                <a href="" class="boton">
+                                    Leer Más
+                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
