Imagen y marco con contenido

--- a/index.html
+++ b/index.html
@@ -140,27 +140,33 @@
                             </a>
                         </article>
                     </div>
-                    <h2>About <span>Us</span></h2>
-                    <div class="underline">
-                        <hr noshade="noshade">
-                        <span>X</span>
-                    </div>
-                    <div class="flex">
-                        <div class="columna">
-                            <figure></figure>
-                        </div>
-                        <div class="columna">
-                            <h3>The History</h3>
-                            <h4>Our Restaurant</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur culpa, iure libero
-                                dicta quasi fugiat facilis velit repellendus iusto maiores! Sit harum ratione aperiam
-                                eligendi dolores doloribus repellat, animi alias?</p>
-                            <div>
-                                <a href="" class="boton">
-                                    Leer Más
-                                    <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                </a>
+                </div>
+            </section>
+            <section id="aboutUs">
+                <h2>About <span>Us</span></h2>
+                <div class="underline">
+                    <hr noshade="noshade">
+                    <span>X</span>
+                </div>
+                <div class="flex">
+                    <div class="columna">
+                        <figure>
+                            <div class="marco">
+                                <img src="./images/about-main.jpg" alt="Nuestro Chef">
                             </div>
+                        </figure>
+                    </div>
+                    <div class="columna">
+                        <h3>The History</h3>
+                        <h4>Our Restaurant</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur culpa, iure libero
+                            dicta quasi fugiat facilis velit repellendus iusto maiores! Sit harum ratione aperiam
+                            eligendi dolores doloribus repellat, animi alias?</p>
+                        <div>
+                            <a href="" class="boton">
+                                Leer Más
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
