--- a/equipo.html
+++ b/equipo.html
@@ -87,6 +87,11 @@
                             <div class="person">
                                 <h3>Shakib.</h3>
                                 <p>Main Chef</p>
+                                <ul class="redesSociales">
+                                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                                </ul>
                             </div>
                         </figure>
                     </article>
@@ -96,6 +101,11 @@
                             <div class="person">
                                 <h3>Alex jr.</h3>
                                 <p>Inter Chef</p>
+                                <ul class="redesSociales">
+                                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                                </ul>
                             </div>
                         </figure>
                     </article>
@@ -105,6 +115,11 @@
                             <div class="person">
                                 <h3>Jhon k.</h3>
                                 <p>Main Chef</p>
+                                <ul class="redesSociales">
+                                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                                </ul>
                             </div>
                         </figure>
                     </article>
